testsuite/tests/indexed-types/should_fail/T9357.stderr

T9357.hs:12:15: error:
    • Illegal polymorphic or qualified type: forall a1. a1 -> a1
    • In the type instance declaration for ‘F’
